# Ipopt

./: ChangeLog.md  Makefile.am  Makefile.in  README.md  configure  configure.ac
.coin-or/: Dependencies
doc/: options.dox
examples/hs071_cpp/: hs071_main.cpp  hs071_nlp.cpp
src/Algorithm/: IpAlgBuilder.cpp  IpAlgBuilder.hpp  IpBacktrackingLineSearch.cpp  IpBacktrackingLineSearch.hpp  IpIpoptAlg.cpp  IpIpoptCalculatedQuantities.hpp  IpRestoIpoptNLP.hpp  Makefile.am  Makefile.in
src/Common/: IpLibraryLoader.cpp  IpUtils.cpp  IpUtils.hpp  config.h.in  config_ipopt_default.h
src/Interfaces/: Makefile.am  (+2 more)
src/contrib/L1ExactPenaltyResto/: IpL1ExactPenaltyLeastSquareMults.cpp  IpL1ExactPenaltyLeastSquareMults.hpp  IpL1ExactPenaltyOutput.cpp  IpL1ExactPenaltyOutput.hpp  IpL1ExactPenaltyResto.hpp  IpL1ExactPenaltyRestoCalculatedQuantities.cpp  IpL1ExactPenaltyRestoCalculatedQuantities.hpp  IpL1ExactPenaltyRestoCalculatedQuantities_v1rho.cpp  IpL1ExactPenaltyRestoData.cpp  IpL1ExactPenaltyRestoData.hpp  IpL1ExactPenaltyRestoFilterConvCheck.cpp  IpL1ExactPenaltyRestoFilterConvCheck.hpp  IpL1ExactPenaltyRestoIpoptNlp.cpp  IpL1ExactPenaltyRestoIpoptNlp.hpp  IpL1ExactPenaltyRestoPdfSpaceSolver.cpp  IpL1ExactPenaltyRestoPdfSpaceSolver.hpp  IpL1ExactPenaltyRestoRegOp.cpp  IpL1ExactPenaltyRestoRegOp.hpp  IpL1ExactPenaltyRho.cpp  IpL1ExactPenaltyRho.hpp  IpL1ExactPenaltyRhoUpdater.cpp  IpL1ExactPenaltyRhoUpdater.hpp  IpL1IpoptAlg.cpp  IpL1IpoptAlg.hpp  IpRestoL1ExactPenalty.cpp  IpRestoL1ExactPenalty.hpp  Makefile.am  Makefile.in  RestoL1ExactPenalty.cpp  RestoL1ExactPenalty.hpp
(+10 files in other folders)
